--- a/index.html
+++ b/index.html
@@ -36,8 +36,21 @@
                 <ul class="nav navbar-nav navbar-right">
                 <!-- Ejercicio 1 -->
                 
+<li>
+    <a href="#inicio">Inicio</a>
+</li>
 
+<li>
+    <a href="#marvel">Marvel</a>
+</li>
 
+<li>
+    <a href="#dccomics">DC comics</a>
+</li>
+
+<li>
+    <a href="#contacto">Contacto</a>
+</li>
 
                 <!-- Ejercicio 1 -->
                 </ul>
